Rework recommendation engine with cross-service data fetching and Docker support
- Replace stub Recommendation entity/repository with a real fan-out model:
  CandidateEvent, RecommendedEvent, FollowSummary, RsvpSummary, PageContent DTOs
- Add UserServiceClient and EventServiceClient HTTP clients; add RestTemplateConfig
- Rewrite RecommendationService to pull followees from user-service and candidate
  events from event-service, then rank and score them
- Update RecommendationController to expose paginated recommendations endpoint
- Add application-docker.properties for Docker deployment (H2 in all profiles)
- Wire GitHub Actions CI and release workflows; rewrite service and controller tests

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>